--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,13 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function sine() {
+ var num = document.getElementById("n2");
+ num.value = Math.sine(num);
+function cuarta() {
+ var num = document.getElementById("n2");
+ num.value = Math.pow(num.value, 4);
+}
 
 </script>
 </head>
@@ -18,3 +25,8 @@ Number_cube:
 Number_cube:
 <input type="text" id="n1">
  <button onclick="cube()"> x^3 </button>
+ <input type="text" id="n2">
+ <button onclick="cuarta()"> x^4 </button>
+ 
+ </body>
+</html>
