--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,10 @@ function cube() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 3);
 }
+function sine() {
+ var num = document.getElementById("n2");
+ num.value = Math.sine(num);
+}
 
 </script>
 </head>
@@ -18,3 +22,9 @@ Number_cube:
 Number_cube:
 <input type="text" id="n1">
  <button onclick="cube()"> x^3 </button>
+ Number sine:
+ <input type="text" id="n1">
+ <button onclick="sin()"> sinx </button>
+
+ </body>
+</html>
